<resources>
    <string name="app_name" translatable="false">Geekbrains Homework</string>
    <string name="city">City</string>
    <string name="degree" translatable="false">+25</string>
    <string name="settings">Settings</string>
    <string name="selectCity">Select city</string>
    <string name="back">Back</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="success">Success</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="yekaterinburg">Yekaterinburg</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="sochi">Sochi</string>
    <string name="kazan">Kazan</string>
    <string name="onCreate">onCreate</string>
    <string name="onStart">onStart</string>
    <string name="onResume">onResume</string>
    <string name="onPause">onPause</string>
    <string name="onStop">onStop</string>
    <string name="onDestroy">onDestroy</string>
    <string name="myLogs" translatable="false">myLogs</string>
    <string name="onSaveInstanceState">onSaveInstanceState</string>
    <string name="mainWeather">Current weather</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="developer">Developer</string>
    <string name="feedback">Feedback</string>
    <string name="change_city">Change city?</string>
    <string name="change">Change</string>
    <string name="error_answer">Server response error</string>
    <string name="error_answer_text">Couldnt get data from server!</string>
    <string name="error_url">Server connection error</string>
    <string name="error_url_text">Couldnt connect to server!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="history">History</string>
    <string name="broadcast_receiver" translatable="false">Broadcast Receiver</string>
    <string name="wifi_enable">Wifi enable</string>
    <string name="wifi_disable">Wifi disable</string>
    <string name="msg_token_fmt" translatable="false">token: </string>
    <string name="default_notification_channel_id" translatable="false">3</string>
    <string name="fcm_message" translatable="false">Firebase push</string>

</resources>