<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_change_city"
            android:icon="@drawable/change"
            android:title="@string/selectCity" />
        <item
            android:id="@+id/nav_history_city"
            android:icon="@drawable/change"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_current_city"
            android:icon="@drawable/change"
            android:title="@string/selecting_current_city" />
    </group>
</menu>