<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageMainWeather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/weather1"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textMainDegree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textMainDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:textSize="85sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMainCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/city"
        android:textSize="35sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainDegree" />

    <ImageButton
        android:id="@+id/buttonSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings"
        android:scaleType="centerInside"
        android:src="@drawable/settings"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonChangeCity"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/change"
        android:contentDescription="@string/selectCity"
        app:layout_constraintBottom_toBottomOf="@+id/textMainCity"
        app:layout_constraintStart_toEndOf="@+id/textMainCity" />

</androidx.constraintlayout.widget.ConstraintLayout>