<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <CheckBox
        android:id="@+id/checkBoxWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxPressure"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/checkBoxPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxWindSpeed"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSelectCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/selectCity"
        android:autofillHints="@string/selectCity"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/buttonSuccess"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPressure" />

    <Button
        android:id="@+id/buttonSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSelectCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextSelectCity" />


    <fragment
        android:id="@+id/fragmentCity"
        android:name="org.sochidrive.weather.FragmentCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSelectCity" />

</androidx.constraintlayout.widget.ConstraintLayout>